Todo nixed - LiveLadder now displays a popup window for Select Tournament instead of bottom row of main screen. But in so doing a new TODO item has been raised :'(

--- a/src/LiveLadder/liveladder.css
+++ b/src/LiveLadder/liveladder.css
@@ -37,3 +37,9 @@
     -fx-background-color: #FFFD00;
     -fx-padding: 10 10 30 10;
 }
+
+.selector
+{
+    -fx-padding: 8;
+    -fx-spacing: 10;
+}
